removed some commented out code